--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <title>Etch A Sketch</title>
 </head>
 <body>
+  <main>
+    <div class="canvas"></div>
+  </main>
   
   <script src="index.js"></script>
 </body>
