Add createPixel and createCanvas functions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <main>
-    <div class="canvas"></div>
+    <div class="canvas" id="canvasContainer"></div>
   </main>
   
   <script src="index.js"></script>
