Add clear canvas function

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <main>
     <div class="canvas" id="canvasContainer"></div>
+    <button id="clearBtn">CLEAR</button>
   </main>
   
   <script src="index.js"></script>
