Add getGrid function

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <main>
     <div class="canvas" id="canvasContainer"></div>
     <button id="clearBtn">CLEAR</button>
+    <button id="gridSizeBtn">Grid size</button>
   </main>
   
   <script src="index.js"></script>
